# libvmod-unidirectors

./: Makefile.am  README.rst  autogen.sh  configure.ac  vmod-unidirectors.spec
debian/: changelog  control  dirs
src/: Makefile.am  dynamic.c  dynamic.h  fall_back.c  hash.c  least_conn.c  random.c  round_robin.c  udir.c  udir.h  vmod.vcc  vmod_unidirectors.c  vmod_unidirectors.vcc
src/tests/: b00016.vtc  d00000.vtc  d00001.vtc  d00002.vtc  d00003.vtc  d00004.vtc  d00005.vtc  d00006.vtc  d00007.vtc  d00008.vtc  d00009.vtc  d00027.vtc  dyn001.vtc  dyn002.vtc  dyn003.vtc  dyn004.vtc  r00263.vtc  r00306.vtc  r00722.vtc  r01498.vtc  r01575.vtc  s00001.vtc  test01.vtc  u00001.vtc  u00002.vtc  u00003.vtc
